--- a/yummy/template/about.pug
+++ b/yummy/template/about.pug
@@ -48,40 +48,40 @@ section.section_1.container-fluid
       .grid-container
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Name Chef
           .location-image
             a(href='#')
-              img(width='300' height='169' src='./images/about_Page/chef1.jpg' alt='Xem chi tiết')
+              img(width='300' height='169' src='./images/about_Page/chef1.jpg' alt='Name Chef')
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Name Chef
           .location-image
             a(href='#')
-              img(width='300' height='169' src='./images/about_Page/chef2.jpg' alt='Xem chi tiết')
+              img(width='300' height='169' src='./images/about_Page/chef2.jpg' alt='Name Chef')
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Name Chef
           .location-image
             a(href='#')
-              img(width='300' height='169' src='./images/about_Page/chef3.jpg' alt='Xem chi tiết')
+              img(width='300' height='169' src='./images/about_Page/chef3.jpg' alt='Name Chef')
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Name Chef
           .location-image
             a(href='#')
-              img(width='300' height='169' src='./images/about_Page/chef2.jpg' alt='Xem chi tiết')
+              img(width='300' height='169' src='./images/about_Page/chef2.jpg' alt='Name Chef')
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Name Chef
           .location-image
             a(href='#')
-              img(width='300' height='169' src='./images/about_Page/chef3.jpg' alt='Xem chi tiết')
+              img(width='300' height='169' src='./images/about_Page/chef3.jpg' alt='Name Chef')
         article#3685.location-listing
           a.location-title(href='#')
-            | Xem chi tiết
+            | Name Chef
           .location-image
             a(href='#')
-              img(width='300' height='169' src='./images/about_Page/chef4.jpg' alt='Xem chi tiết')
+              img(width='300' height='169' src='./images/about_Page/chef4.jpg' alt='Name Chef')
 
 section.section_2.container-fluid
     div
@@ -102,7 +102,7 @@ section.section_3.container-fluid
           img(src='./images/about_Page/blog_post.png' alt='image')
         div
             p.post_content Morbi ut arcu dolor. Maecenas id nulla nec nibh viverra vehicula. Cras feugiat, magna eu lacinia ullamcorper. lla vehicula, lacus ut suscipit fermentum, turpis felis ultricies dui, ut rhoncus libero augue at libero. Morbi ut arcu dolor.
-            p.post_detail Xem chi tiết ...
+            p.post_detail Xem thêm ...
         hr
     div.text-center.btn_detail
         button.btn(type='button') Xem thêm
