--- a/yummy/template/template-parts/footer.pug
+++ b/yummy/template/template-parts/footer.pug
@@ -9,13 +9,13 @@ footer.container-fuild
           | với chúng tôi
         .form-group
           label(for='exampleInputEmail1') Tên
-          input#exampleInputEmail1.form-control(type='text' aria-describedby='emailHelp' placeholder='Nhập tên')
+          input#exampleInputEmail1.form-control(type='text' aria-describedby='emailHelp' placeholder='Nhập tên gọi của bạn')
         .form-group
           label(for='exampleInputEmail1') Email
-          input#exampleInputEmail1.form-control(type='text' aria-describedby='emailHelp' placeholder='Nhập email')
+          input#exampleInputEmail1.form-control(type='text' aria-describedby='emailHelp' placeholder='Nhập địa chỉ email')
         .form-group
-          label(for='exampleFormControlTextarea1') Bình luận của bạn
-          textarea#exampleFormControlTextarea1.form-control(rows='3')
+          label(for='exampleFormControlTextarea1') Tin nhắn của bạn
+          textarea#exampleFormControlTextarea1.form-control(rows='3' placeholder='Viết tin nhắn')
         .text-center 
           button.btn(type='submit') Gửi tin nhắn
     .footer_main.container-fluid.row
