--- a/yummy/css/css_parts/footer.css
+++ b/yummy/css/css_parts/footer.css
@@ -27,24 +27,34 @@ footer{
 }
 .title_form{
     /* color: #ffffff; */
-    font-size: 6.4rem;
+    font-size: 4.8rem;
     font-family: 'Dancing Script', cursive;
 }
 .form-group label{
-    font-size: 2.4rem;
+    font-size: 1.8rem;
     font-family: 'Poppins', sans-serif;
 }
 .form-group input{
+    font-size: 1.2rem;
+    font-family: 'Poppins', sans-serif;
     outline: 0;
-    border-width: 0 0 2px; 
+    border-width: 0 0 1px; 
 }
 textarea{
     outline: 0;
-    border-width: 0 0 2px;
+    border-width: 0 0 1px;
+    
 }
+textarea.form-control{
+    font-size: 1.2rem;
+    font-family: 'Poppins', sans-serif;
+    border: none;
+    border-bottom: 1px solid #ced4da;
+}
+
 .form-group .form-control:focus{
     outline: 0;
-    border-width: 0 0 2px;
+    border-width: 0 0 1px;
     box-shadow: none; 
 }
 .btn{
@@ -73,10 +83,10 @@ textarea{
     padding-bottom: 2rem;
 }
 
-.top_social_bar .fab{
+.footer_area .top_social_bar .fab{
     font-size: 2rem;
 }
-.top_social_bar .fab:hover{
+.footer_area .top_social_bar .fab:hover{
     color: #FD5B00;
 }
 
