--- a/yummy/css/menu.css
+++ b/yummy/css/menu.css
@@ -10,6 +10,7 @@
 }
 .container-fluid{
     padding: 0;
+    margin: 0;
 }
 .header_main{
     padding-top: 5rem;
@@ -19,6 +20,12 @@
     line-height: 18rem;
 }
 /* section 1 */
+/* chỉnh nè */
+.section_1 .menu{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .section_1 .detail_menu{
     padding: 10rem;
 }
