--- a/yummy/template/template-parts/mainMenu.pug
+++ b/yummy/template/template-parts/mainMenu.pug
@@ -1,5 +1,5 @@
 .menu-main.container-fluid
-    nav.navbar.navbar-expand-lg.navbar-light
+    nav.navbar.navbar-expand-md.navbar-light
       a.navbar-brand(href='#') YUMMY
       button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNavDropdown' aria-controls='navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation')
         span.navbar-toggler-icon
