--- a/yummy/css/css_parts/footer.css
+++ b/yummy/css/css_parts/footer.css
@@ -19,10 +19,10 @@ footer{
 .footer_form{
     position: absolute;
     z-index: 1;
-    top: -20rem;
-    left: 36rem;
-    height: 50rem;
-    width: 60rem;
+    top: -50%;
+    left: 27%;
+    height: auto;
+    width: auto;
     background-color: #ffffff;
 }
 .title_form{
@@ -103,3 +103,9 @@ textarea.form-control{
     width: 100%;
     height: 100%;
 } */
+
+@media only screen and (max-width: 576px) {
+    footer{
+        display: none;
+    }
+}
