--- a/yummy/css/css_parts/mainMenu.css
+++ b/yummy/css/css_parts/mainMenu.css
@@ -11,3 +11,94 @@
 .menu-main .navbar .nav-item-sp a:hover{
     color: #FD5B00;
 }
+
+@media only screen and (max-width: 1920px) {
+    .menu-main .collapse{
+        padding-left: 55em;
+    }
+}
+@media only screen and (max-width: 1880px) {
+    .menu-main .collapse{
+        padding-left: 15em;
+    }
+}
+@media only screen and (max-width: 1500px) {
+    .menu-main .collapse{
+        padding-left: 5em;
+    }
+}
+
+@media only screen and (max-width: 1382px) {
+    .menu-main .collapse{
+        padding-left: 0em;
+    }
+}
+@media only screen and (max-width: 1332px) {
+    html{
+        font-size: 50%;
+    }
+    .menu-main .collapse{
+        padding-left: 0em;
+    }
+}
+@media only screen and (max-width: 1024px) {
+    html{
+        font-size: 50%;
+    }
+    .menu-main .navbar-brand{
+        margin-right: 18%;
+    }
+}
+@media only screen and (max-width: 768px) {
+    html{
+        font-size: 40%;
+    }
+    .menu-main .navbar-brand{
+        margin-right: 12%;
+    }
+}
+@media only screen and (max-width: 576px) {
+    html{
+        font-size: 40%;
+    }
+    .menu-main .navbar{
+        padding: 0;
+        background-color: #ffffff;
+    }
+    .navbar-light .navbar-toggler{
+        background-color: #FD5B00;
+        margin: 0rem 2rem 0 0;
+        border: solid 1px #ffffff;
+    }
+    .navbar-toggler-icon{
+        width: 2rem;
+        height: 3rem;
+    }
+    .menu-main .nav-item{
+        text-align: center;
+        background-color: #222023;
+        border-bottom: solid 1px #ffffff;
+    }
+    .menu-main .nav-item a{
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.8rem;
+        font-weight: bold;
+    }
+    .menu-main .nav-item-sp{
+        text-align: center;
+        background-color: #222023;
+        border-bottom: solid 1px #ffffff;
+    }
+    .menu-main .nav-item-sp a{
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.8rem;
+        font-weight: bold;
+    }
+    .menu-main .nav-item-sp .nav-border{
+        border: none;
+    }
+    .navbar-brand{
+        line-height: 6rem;
+        padding-bottom: 2rem;
+    }
+}
